@@ -25,30 +25,55 @@ import java.io.File;
  * @lucene.internal
  */
 public class ExternalPaths {
+
+  /**
+   * <p>
+   * The main directory path for the solr source being built if it can be determined.  If it 
+   * can not be determined -- possily because the current context is a client code base 
+   * using hte test frameowrk -- then this variable will be null.
+   * </p>
+   * <p>
+   * Note that all other static paths available in this class are derived from the source 
+   * home, and if it is null, those paths will just be relative to 'null' and may not be 
+   * meaningful.
+   */
   public static final String SOURCE_HOME = determineSourceHome();
+  /* @see #SOURCE_HOME */
   public static String WEBAPP_HOME = new File(SOURCE_HOME, "webapp/web").getAbsolutePath();
+  /* @see #SOURCE_HOME */
   public static String EXAMPLE_HOME = new File(SOURCE_HOME, "example/solr").getAbsolutePath();
+  /* @see #SOURCE_HOME */
   public static String EXAMPLE_MULTICORE_HOME = new File(SOURCE_HOME, "example/multicore").getAbsolutePath();
+  /* @see #SOURCE_HOME */
   public static String EXAMPLE_SCHEMA=EXAMPLE_HOME+"/collection1/conf/schema.xml";
+  /* @see #SOURCE_HOME */
   public static String EXAMPLE_CONFIG=EXAMPLE_HOME+"/collection1/conf/solrconfig.xml";
   
+  /**
+   * Ugly, ugly hack to determine the example home without depending on the CWD
+   * this is needed for example/multicore tests which reside outside the classpath.
+   * if the source home can't be determined, this method returns null.
+   */
   static String determineSourceHome() {
-    // ugly, ugly hack to determine the example home without depending on the CWD
-    // this is needed for example/multicore tests which reside outside the classpath
-    File file;
     try {
-      file = new File("solr/conf");
-      if (!file.exists()) {
-        file = new File(Thread.currentThread().getContextClassLoader().getResource("solr/conf").toURI());
+      File file;
+      try {
+        file = new File("solr/conf");
+        if (!file.exists()) {
+          file = new File(Thread.currentThread().getContextClassLoader().getResource("solr/conf").toURI());
+        }
+      } catch (Exception e) {
+        // If there is no "solr/conf" in the classpath, fall back to searching from the current directory.
+        file = new File(".");
       }
-    } catch (Exception e) {
-      // If there is no "solr/conf" in the classpath, fall back to searching from the current directory.
-      file = new File(".");
+      File base = file.getAbsoluteFile();
+      while (!(new File(base, "solr/CHANGES.txt").exists()) && null != base) {
+        base = base.getParentFile();
+      }
+      return (null == base) ? null : new File(base, "solr/").getAbsolutePath();
+    } catch (RuntimeException e) {
+      // all bets are off
+      return null;
     }
-    File base = file.getAbsoluteFile();
-    while (!new File(base, "solr/CHANGES.txt").exists()) {
-      base = base.getParentFile();
-    }
-    return new File(base, "solr/").getAbsolutePath();
   }
 }
